feat: main 계산기 화면

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Calculator</string>
+
+    <!-- Calculator Button -->
+    <string name="clear_button">C</string>
+    <string name="not_use_button">()</string>
+    <string name="percent_button">%</string>
+    <string name="divide_button">÷</string>
+    <string name="multiply_button">X</string>
+    <string name="minus_button">-</string>
+    <string name="plus_button">+</string>
+    <string name="equal_button">=</string>
+
 </resources>
