feat: 결과, 초기화 기능

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="plus_button">+</string>
     <string name="equal_button">=</string>
 
+    <string name="close_button">닫기</string>
+    <string name="clear_history_button">계산기록 삭제</string>
+
 </resources>
